--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -22,6 +22,7 @@
       }
     /* .bg-mint { background-color: #BDE9E8;} */
      /* ------ FontSize ------*/
+     .text-sm { font-size: 0.95rem;}
      .text-p { font-size: 1.1rem; }          /* Paragraphe standard */
      .text-base { font-size: 1.5rem; }       /* Taille de base */
      .text-h4 { font-size: 2rem; }       /* Heading 4 */
