--- a/app/components/trending_artist_component.html.erb
+++ b/app/components/trending_artist_component.html.erb
@@ -7,7 +7,7 @@
         <%= artist.username %>
     </h1>
     <div class="space-y-4">
-      <h2 class="font-base text-base text-white italic uppercase inline-block px-8 py-0.5 bg-smoke border-b-3 border-l-2 border-mint">
+      <h2 class="font-base text-p text-white italic uppercase inline-block px-8 py-0.5 bg-smoke border-b-3 border-l-2 border-mint">
         About the artist
       </h2>
        <% if artist.bio.present? %>
@@ -17,14 +17,31 @@
      </div>
      <div class="flex flex-col justify-end items-start">
         <div>
-    <% if defined?(current_user) && current_user %>
-      <p>Hello, <%= current_user.username %> !</p>
-    <% else %>
-      <%= link_to new_user_session_path, class: "inline-block py-0.5 px-8 bg-slate-800 text-white font-base text-base" do %>
-       <p>connect</p>
-      <% end %>
+  <% if defined?(current_user) && current_user %>
+    <p>Hello, <%= current_user.username %> !</p>
+  <% else %>
+    <%= link_to new_user_session_path, data: { turbo: false } do %>
+      <div>
+        <div class="flex flex-row gap-2 items-center text-slate-400">
+          <div class="w-5 h-5 flex-shrink-0">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="w-full h-full"><path fill="currentColor" d="m8.6 22.5l-1.9-3.2l-3.6-.8l.35-3.7L1 12l2.45-2.8l-.35-3.7l3.6-.8l1.9-3.2L12 2.95l3.4-1.45l1.9 3.2l3.6.8l-.35 3.7L23 12l-2.45 2.8l.35 3.7l-3.6.8l-1.9 3.2l-3.4-1.45zm.85-2.55l2.55-1.1l2.6 1.1l1.4-2.4l2.75-.65l-.25-2.8l1.85-2.1l-1.85-2.15l.25-2.8l-2.75-.6l-1.45-2.4L12 5.15l-2.6-1.1L8 6.45l-2.75.6l.25 2.8L3.65 12l1.85 2.1l-.25 2.85l2.75.6zm1.5-4.4L16.6 9.9l-1.4-1.45l-4.25 4.25l-2.15-2.1L7.4 12z"/></svg>
+          </div>
+          <p class="font-alt text-p text-center pt-2">members only - log in first</p>
+        </div>
+        <div class="flex flex-row items-center gap-4">
+            <p class="group inline-flex items-center text-center gap-3 bg-smoke py-2 px-8 rounded-md font-base font-medium text-p text-white whitespace-nowrap transition-all duration-300 ease-in-out hover:bg-slate-100 hover:text-smoke">
+               <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="w-4 h-4 flex-shrink-0 group-hover:-rotate-10"><path fill="currentColor" d="M19 14v3c0 .55-.45 1-1 1h-1v-4zM7 14v4H6c-.55 0-1-.45-1-1v-3zm5-13a9 9 0 0 0-9 9v7c0 1.66 1.34 3 3 3h3v-8H5v-2c0-3.87 3.13-7 7-7s7 3.13 7 7v2h-4v8h3c1.66 0 3-1.34 3-3v-7a9 9 0 0 0-9-9"/></svg></span> listen online
+            </p>
+             <p class="group inline-flex items-center text-center gap-3 bg-smoke py-2 px-8 rounded-md font-base font-medium text-p text-white whitespace-nowrap transition-all duration-300 ease-in-out hover:bg-slate-100 hover:text-smoke">
+               <span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="w-5 h-5 flex-shrink-0 group-hover:-rotate-10"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 18h12l4-4H8zm4-4l-4-4h12l4 4m-4-4l4-4H8l-4 4"/></svg>
+               </span> buy music
+            </p>
+        </div>
+      </div>
     <% end %>
-  </div>
+  <% end %>
+</div>
         <p class="mt-2 text-sm text-gray-500">
       <%= artist.albums.count %> albums • 
       <%= pluralize(artist.views_count, 'vue', 'vues') %>
