--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,78 @@
+<section class="relative container md:min-h-[80vh] w-full flex flex-col items-center justify-start">
+  <div class="relative w-sm md:h-[80vh] bg-gradient-to-l from-indigo-200 via-red-200 to-yellow-100 rounded-2xl border-b-4 border-r-6 border-white">
+ <div class="flex flex-col gap-4 items-center">
+<header class="flex flex-col items-center w-full gap-4">
+<div>
+    <div class="w-32 h-32 animate-float">
+        <img src="/panda.webp" alt="logo of a floating panda" class="w-full h-full">
+      </div>
+      <p class="font-title text-h3 text-smoke md:-mt-2">
+        welcome !
+      </p>
+</div>
+      <p class="font-base text-sm text-smoke uppercase text-center w-lg">
+      Sign up to Monotone Panda to continue with the Platform.
+    </p>
+</header>
+
+<div class=" w-md  flex flex-col items-center mt-5">
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+ 
+
+  <div class="form-inputs flex flex-col items-center gap-5">
+    <%= f.input :email,
+                label: 'Email:',
+                required: true,
+                autofocus: true,
+                wrapper_html: { class: "bg-green-600 font-base capitalize text-smoke bold" },
+                input_html: { autocomplete: "email",
+                class: "w-full px-8 py-2 text-smoke bg-red-600" }
+                 %>
+    <!-- 
+    <%= f.input :username,
+                label: "nickname :",
+                required: true,
+                input_html: { autocomplete: "username",
+                class: "w-full px-2 py-4 text-smoke" },
+                wrapper_html: { class: "bg-white font-base capitalize text-smoke w-full" } %>
+    
+    <%= f.input :password,
+                label: 'pwd :',
+                required: true,
+                input_html: { autocomplete: "new-password",
+                class: "w-full px-2 py-4 text-smoke" },
+                wrapper_html: { class: "bg-white font-base capitalize text-smoke w-full" } %>
+    
+    <%= f.input :password_confirmation,
+                label: 'confirm pwd :',
+                required: true,
+                input_html: { autocomplete: "new-password",
+                class: "w-full px-2 py-4 text-smoke" },
+                wrapper_html: { class: "bg-white font-base capitalize text-smoke w-full" } %>
+   -->
+  </div>
+
+  <div class="form-actions text-center mt-6">
+    <%= f.button :submit, "submit", class: "px-4 py-2 bg-slate-900 text-white rounded-md hover:bg-slate-800" %>
+  </div>
+<% end %>
+
+
+
+</div>
+
+ </div>
+  </div>
+
+</section>
+
+
+
+
+
+
+
+<!-- 
 <div class="min-h-screen w-full flex items-center justify-center bg-gray-50">
   <div class="max-w-md w-full p-6 bg-white rounded-lg shadow-md">
     <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Inscription</h2>
@@ -47,3 +122,4 @@
     </div>
   </div>
 </div>
+-->
