--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/panda.png">
   </head>
 
- <body class="w-full min-h-screen flex flex-col bg-gradient-to-tl from-gray-100 to-gray-300">
+ <body class="w-full min-h-screen flex flex-col bg-gradient-to-tl from-gray-100 to-gray-300 hide-required-markers">
 
      <%= render(NavbarComponent.new(
       user_signed_in: user_signed_in?,
