--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <section class="relative container md:min-h-[80vh] w-full flex flex-col items-center justify-start">
-  <div class="relative w-sm md:h-[80vh] bg-gradient-to-l from-indigo-200 via-red-200 to-yellow-100 rounded-2xl border-b-4 border-r-6 border-white">
+  <div class="relative w-sm md:min-h-[80vh] bg-gradient-to-l from-indigo-200 via-red-200 to-yellow-100 rounded-2xl border-b-4 border-r-6 border-white md:pb-30">
  <div class="flex flex-col gap-4 items-center">
 <header class="flex flex-col items-center w-full gap-4">
 <div>
@@ -15,52 +15,75 @@
     </p>
 </header>
 
-<div class=" w-md  flex flex-col items-center mt-5">
+<div class="w-md flex flex-col items-center mt-5">
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
  
 
-  <div class="form-inputs flex flex-col items-center gap-5">
+  <div class="form-inputs flex flex-col items-center gap-2">
     <%= f.input :email,
-                label: 'Email:',
+                label: 'Enter your email',
                 required: true,
                 autofocus: true,
-                wrapper_html: { class: "bg-green-600 font-base capitalize text-smoke bold" },
+                wrapper_html: { class: "md:w-64 font-alt text-base uppercase text-slate-500" },
                 input_html: { autocomplete: "email",
-                class: "w-full px-8 py-2 text-smoke bg-red-600" }
+                class: "bg-white font-base text-sm mt-0 w-full px-2 py-2 text-smoke" }
                  %>
+
+                 <%= f.input :username,
+                label: "Enter your nickname",
+                required: true,
+                 wrapper_html: { class: "md:w-64 font-alt text-base uppercase text-slate-500" },
+                input_html: { autocomplete: "email",
+                class: "bg-white font-base text-sm mt-0 w-full px-2 py-2 text-smoke" } %>
+
+                 <%= f.input :password,
+                label: 'Enter your strong pwd',
+                required: true,
+                 wrapper_html: { class: "md:w-64 font-alt text-base uppercase text-slate-500" },
+                input_html: { autocomplete: "email",
+                class: "bg-white font-base text-sm mt-0 w-full px-2 py-2 text-smoke" } %>
+
+                 <%= f.input :password_confirmation,
+                label: 'Confirm your strong pwd',
+                required: true,
+                wrapper_html: { class: "md:w-64 font-alt text-base uppercase text-slate-500" },
+                input_html: { autocomplete: "email",
+                class: "bg-white font-base text-sm mt-0 w-full px-2 py-2 text-smoke" } %>
     <!-- 
-    <%= f.input :username,
-                label: "nickname :",
-                required: true,
-                input_html: { autocomplete: "username",
-                class: "w-full px-2 py-4 text-smoke" },
-                wrapper_html: { class: "bg-white font-base capitalize text-smoke w-full" } %>
     
-    <%= f.input :password,
-                label: 'pwd :',
-                required: true,
-                input_html: { autocomplete: "new-password",
-                class: "w-full px-2 py-4 text-smoke" },
-                wrapper_html: { class: "bg-white font-base capitalize text-smoke w-full" } %>
+
     
-    <%= f.input :password_confirmation,
-                label: 'confirm pwd :',
-                required: true,
-                input_html: { autocomplete: "new-password",
-                class: "w-full px-2 py-4 text-smoke" },
-                wrapper_html: { class: "bg-white font-base capitalize text-smoke w-full" } %>
+   
    -->
   </div>
+     <div class="form-actions mt-10 flex flex-col items-center">
+      <button type="submit" class="group flex gap-4 items-center bg-smoke text-white border-b-1 border-slate-800/30 rounded-md px-20 py-2 shadow-none transition-all duration-300 ease-in-out hover:bg-white hover:text-smoke md:hover:border-l-3 md:hover:border-b-4 md:hover:-translate-y-2  md:hover:border-smoke">
+      <div class="w-8 h-8 block md:group-hover:hidden">
 
-  <div class="form-actions text-center mt-6">
-    <%= f.button :submit, "submit", class: "px-4 py-2 bg-slate-900 text-white rounded-md hover:bg-slate-800" %>
-  </div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="w-full h-full"><path fill="currentColor" d="M4 20v-1h2V5.616q0-.691.463-1.153T7.616 4h8.769q.69 0 1.153.463T18 5.616V19h2v1zm13-1V5.616q0-.231-.192-.424T16.384 5H7.616q-.231 0-.424.192T7 5.616V19zm-2.77-6.23q.31 0 .54-.23T15 12t-.23-.54t-.54-.23t-.539.23t-.23.54t.23.54t.54.23M7 5v14z"/></svg>
+
+
+      </div>
+      <div class="w-8 h-8 hidden md:group-hover:block">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="w-full h-full"><path fill="currentColor" d="M11 12.77q.31 0 .54-.23t.23-.54t-.23-.54t-.54-.23t-.54.23t-.23.54t.23.54t.54.23M7 20v-1l6.442-.654q.231-.019.395-.192q.163-.173.163-.404V6.452q0-.567-.37-.983q-.368-.415-.91-.465L7.615 4.5v-1l5.23.516q.927.103 1.54.794Q15 5.5 15 6.427v11.312q0 .609-.417 1.066t-1.027.524zm0-1h10V5.116q0-.27-.173-.443t-.442-.173h-8.77q-.269 0-.442.173T7 5.116zm-2.039 1q-.213 0-.356-.143T4.46 19.5t.144-.357T4.96 19H6V5.116q0-.672.472-1.144T7.616 3.5h8.769q.67 0 1.143.472q.472.472.472 1.144V19h1.039q.213 0 .356.143t.144.357t-.144.357t-.356.143z"/></svg>
+
+      </div>
+        <p>
+          J<span class="inline-block md:group-hover:-rotate-12">o</span>i<span class="inline-block md:group-hover:rotate-8">n</span>
+        </p>
+      </button>
+    </div>
 <% end %>
-
-
-
 </div>
 
+
+<div class="absolute bottom-0 w-md px-8 py-6">
+      <p class="font-base text-xs text-slate-500 text-center">
+        By continuing, you agree to Monotone Panda's Terms of Service and Privacy Policy.
+      </p>
+    </div>
+  </div>
+   
  </div>
   </div>
 
