--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -1,5 +1,5 @@
 <!-- -->
-<nav class="fixed top-0 left-0 right-0 bg-slate-400/10 backdrop-blur-sm text-white z-10 border-b-1 border-slate-400/30 z-999">
+<nav class="fixed top-0 left-0 right-0 bg-slate-400/10 backdrop-blur-sm text-white border-b-1 border-slate-400/30 z-999">
   <div class=" mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
@@ -8,10 +8,14 @@
       <div>
 
 <!-- //---- IF USER SIGNED IN LOGIC --------// -->        
+
+
+
+
         <% if user_signed_in %>
-          <div class="flex items-center space-x-4">
-            <%= link_to "Drop Album", new_album_path, class: "px-3 py-2 bg-indigo-600 rounded-md text-sm font-medium hover:bg-indigo-700" %>
-            <%= link_to "Dashboard", dashboard_user_path(current_user), class: "px-3 py-2 rounded-md text-sm font-medium hover:bg-gray-700" %>
+          <div class="flex flex-row items-center space-x-4">
+            <%= link_to "Dashboard", dashboard_user_path(current_user), class: "inline-block px-4 py-0.5 font-base text-lg font-medium text-slate-600 lowercase rounded-none transition-all duration-100 ease-out hover:text-smoke hover:font-bold hover:border-b-1 hover:border-r-1 hover:rounded-sm hover:border-slate-800/30" %>
+            <%= link_to "Drop", new_album_path, class: "inline-block px-4 py-0.5 font-base text-lg font-medium text-slate-600 lowercase rounded-none transition-all duration-100 ease-out hover:text-smoke hover:font-bold hover:border-b-1 hover:border-r-1 hover:rounded-sm hover:border-slate-800/30" %>
             <div class="relative group">
               <button class="flex items-center text-sm font-medium rounded-full focus:outline-none">
                 <% if current_user.profile_image.attached? %>
@@ -31,6 +35,10 @@
             </div>
           </div>
         <% else %>
+
+
+
+
 
 <!-- //---- BUTTONS & GITHUB LINKS  --------// -->
           <div class="flex items-center gap-2">
