--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -1,4 +1,11 @@
-<div>
-  <h1 class="font-bold text-4xl">Albums#edit</h1>
-  <p>Find me in app/views/albums/edit.html.erb</p>
+<!-- app/views/albums/edit.html.erb -->
+<div class="max-w-3xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
+  <div class="bg-white rounded-lg shadow">
+    <div class="px-6 py-5 border-b border-gray-200">
+      <h1 class="text-xl font-medium text-gray-900">Edit Album: <%= @album.title %></h1>
+    </div>
+    <div class="px-6 py-5">
+      <%= render AlbumFormComponent.new(album: @album, genres: @genres) %>
+    </div>
+  </div>
 </div>
