--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,4 +1,12 @@
-<div>
-  <h1 class="font-bold text-4xl">Albums#new</h1>
-  <p>Find me in app/views/albums/new.html.erb</p>
+<div class="max-w-3xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
+  <div class="bg-white rounded-lg shadow">
+    <div class="px-6 py-5 border-b border-gray-200">
+      <h1 class="text-xl font-medium text-gray-900">Create New Album</h1>
+    </div>
+    <div class="px-6 py-5">
+      <%= turbo_frame_tag "album_form" do %>
+        <%= render(AlbumFormComponent.new(album: @album, genres: @genres)) %>
+      <% end %>
+    </div>
+  </div>
 </div>
