--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
-<div class="pb-2">
+<div class="mt-6 pb-2">
   <div class="grid grid-cols-3 gap-xl relative z-10 ">
     <div class="col-span-2 w-full flex flex-col items-start gap-6">
     <h1 class="font-title  text-huge-h1 text-black uppercase leading-none">Human-made music for humans</h1>
     <h2 class="font-base text-h4 text-main text-left w-lg leading-tight">
-        Your music on blockchain. Explore, listen, share, build.
+        Your music on the blockchain. Explore, listen, share, build.
     </h2>
      <%= link_to new_user_registration_path do %>
      <div class="group flex gap-2 items-center bg-slate-100 text-smoke border-b-1 border-slate-800/30 rounded-md px-24 py-2 shadow-none transition-all duration-300 ease-in-out hover:gap-6 hover:bg-smoke hover:text-white hover:-translate-y-1 hover:shadow-[4.0px_8.0px_8.0px_rgba(0,0,0,0.38)]">
