--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -26,6 +26,12 @@
   }
   /* .bg-mint { background-color: #BDE9E8;} */
   /* ------ FontSize ------*/
+  .text-xxxs {
+    font-size: 0.4rem;
+  }
+  .text-xxs {
+    font-size: 0.6rem;
+  }
   .text-xs {
     font-size: 0.8rem;
   }
