--- a/app/components/footer_component.html.erb
+++ b/app/components/footer_component.html.erb
@@ -1,13 +1,14 @@
 <!-- app/components/footer_component.html.erb -->
-<footer class="bg-smoke text-white">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div class="md:col-span-1">
-        <h3 class="text-lg font-semibold mb-4">Monotone</h3>
-        <p class="text-gray-300 text-sm">
-          Plateforme pour artistes permettant de monétiser leur musique via NFTs sur Solana.
+<footer class=" bg-slate-400/20 border-t-1 border-slate-400/30 text-smoke w-full">
+  <div class="max-w-lg px-4 sm:px-6 lg:px-8 py-4 flex flex-col gap-2 items-start">
+           <%= link_to "monotone panda", root_path, class: "uppercase text-base font-alt tracking-wide text-smoke" %>
+         <p class="font-main text-xs text-smoke/40 text-left ">
+          Website under construction. Code available on <span><a href="https://github.com/bIRDwAntS/solana_nft_music" target="_blank" rel="noopener noreferrer" class=" text-slate-600 transition-all duration-300 ease-in-out hover:text-slate-400">
+              Github
+            </a></span>
         </p>
+          
       </div>
-    </div>
-  </div>
+     
+  
 </footer>
