--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,13 @@
   </head>
 
  <body class="w-full min-h-screen flex flex-col bg-gradient-to-tl from-gray-100 to-gray-300 hide-required-markers">
-
+  
      <%= render(NavbarComponent.new(
       user_signed_in: user_signed_in?,
       current_user: current_user
     )) %>
 
-
+<%= render FlashMessageComponent.new(flash: flash) %>
     <main class="container mx-auto md:mt-15 py-8 flex-col flex-grow">
        <%= render 'shared/flash_messages' if defined?(render_flash_messages) %>
       <%= yield %>
