--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,8 +1,11 @@
 <!-- app/views/albums/new.html.erb -->
 <div class="max-w-3xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
-  <div class="bg-white rounded-lg shadow">
+  <div class="bg-gradient-to-l from-rose-100 to-teal-100 rounded-2xl border-b-4 border-l-6 border-white">
     <div class="px-6 py-5 border-b border-gray-200">
-      <h1 class="text-xl font-medium text-gray-900">Create New Album</h1>
+      <h1 class="font-title text-h3 text-coal md:-mt-2">Create New Album</h1>
+       <p class="font-base text-sm text-smoke uppercase w-lg">
+      It's time to share your bangers with the community.
+    </p>
     </div>
     <div class="px-6 py-5">
       <%= render AlbumFormComponent.new(album: @album, genres: @genres) %>
