--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -14,11 +14,12 @@
             <%= link_to "Dashboard", dashboard_user_path(current_user), class: "inline-block px-4 py-0.5 font-base text-lg font-medium text-slate-600 lowercase rounded-none transition-all duration-100 ease-out hover:text-smoke hover:font-bold hover:border-b-1 hover:border-r-1 hover:rounded-sm hover:border-slate-800/30" %>
             <%= link_to "Drop", new_album_path, class: "inline-block px-4 py-0.5 font-base text-lg font-medium text-slate-600 lowercase rounded-none transition-all duration-100 ease-out hover:text-smoke hover:font-bold hover:border-b-1 hover:border-r-1 hover:rounded-sm hover:border-slate-800/30" %>
             <div class="relative group">
-              <button class="flex items-center text-sm font-medium rounded-full focus:outline-none">
+              <button class="flex items-center text-sm font-medium w-48 focus:outline-none">
+                <span class="ml-2"><%= current_user.username %></span>
                 <% if current_user.profile_image.attached? %>
                   <%= image_tag current_user.profile_image.variant(resize_to_fill: [40, 40]), class: "h-8 w-8 rounded-full" %>
                 <% else %>
-                  <div class="h-8 w-8 rounded-full bg-indigo-500 flex items-center justify-center">
+                  <div class="h-8 w-8 text-black bg-indigo-500 flex items-center justify-center">
                     <%= current_user.username[0].upcase %>
                   </div>
                 <% end %>
