--- a/app/components/empty_album_component.html.erb
+++ b/app/components/empty_album_component.html.erb
@@ -1,4 +1,4 @@
-<div class="container bg-amber-400">
+<div class="container bg-gradient-to-r from-sky-400 via-rose-400 to-lime-400 border-1 border-slate-400/30 px-4 py-6 rounded-2xl">
      <h3 class="text-lg leading-6 font-medium text-gray-900">Your Music Collection</h3>
 
         <h3 class="mt-2 text-xl font-medium text-gray-900">No albums yet</h3>
